# oauth2-pg-store

./: Cargo.toml  README.md
.sqlx/: query-07ca541cbd274bb67940dc109572066ad3a34130cd31009279d81b67690327a6.json  query-241fbd2183be6b09883f3b24e388ee5f3e0be4aedc347e5e7a6b8e8e3915d57b.json  query-366b3f878f278d668bffa4fbf0dd3645358df481fc80a9efa824ff09f6131087.json  query-5ac6554005faf872b7882f4f32314ffc2b96280711cfaa53e14d863025824337.json  query-a656caae2856833250f54537cf65dbc7c44a26b4893c69cd7c8535804c803aef.json  query-e871517bf32e15cf8955ba56fe7e654a2ae981327b756784aba42572a5eab064.json
examples/: axum-server.rs  simple_usage.rs
migrations/: 20260216000950_create_oauth2_tokens.down.sql  20260216000950_create_oauth2_tokens.up.sql
src/: lib.rs
tests/: integration.rs
