[package]
name = "oauth2-pg-store"
version = "0.1.0"
edition = "2024"


[dependencies]
oauth2 = { version = "5", features = ["reqwest"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full", "macros"] }
blake3 = "1.5"
hex = "0.4"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
serde_json = "1.0.149"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros", "time"] }
lazy_static = "1.5"
testcontainers = "0.26.0"

